2003-06-11  Tor Lillqvist  <tml@iki.fi>

	* glib-zip.in (DEVZIP): libtool 1.5 installs DLLs in the bin
	subdirectory, so get them from there.

	* glib/gwin32.c (g_win32_getlocale): Use "sr@Latn" and "sr" in the
	same way as the po files for Serbian in Latin and Cyrillic script.

2003-06-11  Sebastian Wilhelmi  <seppi@seppi.de>

	* configure.in: Remove false &. Spotted by Albert Chin
	<gtk-devel-list@thewrittenword.com>.

2003-06-08  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c: Fix indentation and spacing. Use
	INADDR_LOOPBACK instead of inet_addr("127.0.0.1") and
	gethostbyaddr().

Sat Jun  6 16:18:10 2003  Andrew Lanoix  <alanoix@umich.edu>

	* glib/giowin32.c: Resolved thread deadlocks in socket 
	ichannel code to support Add-Cancel-Add watch functionality 
	on windows. Also cleaned up socket error handling to not 
	segfault and do the right thing.
	
Fri Jun  6 10:24:23 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* m4macros/glib-gettext.m4: Test for Solaris native gettext 
	in libc, seeing if it supports GNU catalog format (#85217).
	
Thu Jun  5 23:40:31 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c: When dispatching a source that is
	!CAN_RECURSE, temporarily remove any file descriptors
	that that source has registered from the main loop, to keep
	recursive main loops from busy-waiting if input
	becomes available on one of those file descriptors.
	(#112222, Christian Krause)

	* glib/gmain.c (g_source_set_priority): Properly
	remove the source from the context's source list
	and reinsert it sorted, rather than simply setting
	source->next/prev to NULL! (#114274)

2003-06-06  Matthias Clasen  <maclas@gmx.de>

	* glib/gstring.c (g_string_append_printf_internal): Use
	g_vasprintf() and g_string_append_len(), thus enabling embedded
	nuls in the result of g_string_printf().  (#92492, Owen Taylor)

	* tests/string-test.c: Add a test for embedded nuls in the
	result of g_string_printf().
